Se agrego buscardor

--- a/src/app/shared/modules/futbol-day/futbol-day.component.html
+++ b/src/app/shared/modules/futbol-day/futbol-day.component.html
@@ -9,7 +9,7 @@
     </div>
    <div class="row">
       <div *ngFor="let journey of journeys">
-        <app-futbol-day-item class="rounded float-left" [journey]='journey' [league]='league' >cargndo jornada</app-futbol-day-item>
+        <app-futbol-day-item class="rounded float-left" [journey]='journey' [league]='league' >cargando jornada</app-futbol-day-item>
       </div>
   </div>
 </div>
