--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <app-sidebar></app-sidebar>
 <section class="main-container">
-    <md-card><router-outlet></router-outlet></md-card>
+    <md-card style="min-height:300px"><router-outlet></router-outlet></md-card>
     
 </section>
