--- a/src/app/shared/modules/futbol-day/futbol-day-detail/futbol-day-detail.component.html
+++ b/src/app/shared/modules/futbol-day/futbol-day-detail/futbol-day-detail.component.html
@@ -1,10 +1,10 @@
 
+<hr>
 <div [@routerTransition] *ngIf="matches">
     <app-match-form [teams]="teams" [matches]="matches"></app-match-form>
 </div>
 <div class="container">
     <div class="card-group" >
-        <app-match-item *ngFor="let match of matches" [match]="match"></app-match-item>
+        <app-match-item *ngFor="let match of matches" [match]="match" class="col-lg-6"></app-match-item>
     </div>
-
 </div>
