--- a/src/app/shared/modules/match-shared/match-pick/match-pick.component.html
+++ b/src/app/shared/modules/match-shared/match-pick/match-pick.component.html
@@ -1,5 +1,5 @@
-<md-card style="width: 250px;">
-      <img [src]="team.imageUrl" onerror="this.src='./assets/images/football-team-logo-default.jpg'" class="md-card-image" style="width:150px; height:150px;"  alt="user avatar">
+<md-card  style="width:150px; height:150px;">
+      <img [src]="team.imageUrl" onerror="this.src='./assets/images/football-team-logo-default.jpg'" class="md-card-image"  alt="user avatar">
       <md-card-content>
         <h2>{{team.title}}</h2>
       </md-card-content>
