--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,3 +5,47 @@
 @import "rtl";
 @import "responsive";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.sortable-item{
+  width: 32%;
+  height: 100px;
+  float: left;
+  border: 1px solid #ccc;
+  margin: 5px;
+}
+
+.sortable-item img{
+    width: 100px;
+    height: 100px;
+    float: left;
+    padding-top: 10px;
+}
+
+.sortable-item h2,.col-lg-4 h2{
+    padding-top: 30px;
+    font-size: 1.5em;
+}
+
+.col-sm-4 .sortable-item{
+  width: 100%;
+  height: 100px;
+  float: left;
+  border: 1px solid #ccc;
+  margin: 5px;
+}
+
+.col-lg-4 { float: left; }
+.col-lg-4.center{ text-align: center;}
+.col-lg-4 img{
+  width: 50px;
+  height: 50px;
+  float: left;
+  padding-top: 10px;
+}
+
+.clicked{cursor: pointer;}
+.bigClass{
+    width: 100%;
+    border: 0px;
+    border-bottom: 1px solid;
+}
