--- a/src/app/layout/teams/teams.component.html
+++ b/src/app/layout/teams/teams.component.html
@@ -25,7 +25,7 @@
                 </ng-template>
                 <br><br>
                 <div class="row">
-                    <app-team-form [league]='league'></app-team-form>
+                    <app-team-form ></app-team-form>
                 </div>
             </md-tab>
         </md-tab-group>
