--- a/src/app/shared/modules/futbol-day/futbol-day-form/futbol-day-form.component.html
+++ b/src/app/shared/modules/futbol-day/futbol-day-form/futbol-day-form.component.html
@@ -2,18 +2,20 @@
   <div class="card-block">
     <form (ngSubmit)="onSubmit()" #Form="ngForm">
       <div class="form-group">
-        <label for="name">Titulo de la jornada</label>
-        <input class="form-control" id="name" type="text" placeholder="Titulo?" [(ngModel)]="journey.title" name="title" required
-          minlength="2" maxlength="23" #title='ngModel' autofocus>
-        <div *ngIf="title.errors && (title.dirty || title.touched)" class="alert alert-danger">
-          <div [hidden]="!title.errors.required">
-            Titulo es requerido.
-          </div>
-          <div [hidden]="!title.errors.minlength">
-            El minimo del nombre son 4 caracteres.
-          </div>
-          <div [hidden]="!title.errors.maxlength">
-            El maximo de caracateres son 20.
+        <div class="row">
+          <label for="name">Titulo de la jornada</label>
+          <input class="form-control" id="name" type="text" placeholder="Titulo?" [(ngModel)]="journey.title" name="title" required
+            minlength="2" maxlength="23" #title='ngModel' autofocus>
+          <div *ngIf="title.errors && (title.dirty || title.touched)" class="alert alert-danger">
+            <div [hidden]="!title.errors.required">
+              Titulo es requerido.
+            </div>
+            <div [hidden]="!title.errors.minlength">
+              El minimo del nombre son 4 caracteres.
+            </div>
+            <div [hidden]="!title.errors.maxlength">
+              El maximo de caracateres son 20.
+            </div>
           </div>
         </div>
       </div>
@@ -25,7 +27,6 @@
 
 <ng-template #thenTemplate>
   <button type="submit" class="btn btn-success" [disabled]="!Form.form.valid">Crear</button>
-  <button type="button" class="btn btn-default" (click)="newJourney(); Form.reset()">Nueva Liga</button>
 </ng-template>
 <ng-template #elseTemplate>
   <div class="form-inline">
