--- a/src/app/shared/modules/futbol-day/futbol-day.component.html
+++ b/src/app/shared/modules/futbol-day/futbol-day.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="row">
+  <!--<div class="row">
     <button md-raised-button (click)="onGenerate()">
         GENERAR JORNADAS
     </button>
-  </div>
+  </div>-->
    <div *ngIf="league" class="row">
       <app-futbol-day-form [league]='league'></app-futbol-day-form>
     </div>
