--- a/src/app/shared/modules/player-share/player-item2/player-item2.component.html
+++ b/src/app/shared/modules/player-share/player-item2/player-item2.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="player">
-    <div class="col-4"><img class="md-card-image example-header-image" style="width:80px; height:80px;" onerror="this.src='./assets/images/none.png'"
+<div *ngIf="player" class="col-12">
+    <div class="left"><img class="md-card-image example-header-image" onerror="this.src='./assets/images/none.png'"
             [src]="player.imageUrl" alt="user avatar"></div>
-    <div class="col-8">
+    <div class="padding20 left">
         {{player.name}}
     </div>
 </div>
