--- a/src/app/layout/leagues/leagues.component.html
+++ b/src/app/layout/leagues/leagues.component.html
@@ -1,9 +1,5 @@
 <div [@routerTransition]>
-   <app-page-header [heading]="'Forms'" [icon]="'fa-edit'"></app-page-header>
-  <div class="row">
-    <h2> Ligas de <b>'todos los torneos'</b></h2>
-  </div>
-  <hr>
+   <app-page-header [heading]="'Ligas'" [icon]="'fa-trophy'"></app-page-header>
    <div class="row align-items-center">
       <div *ngFor="let league of leagues">
         <app-league-item class="rounded" [league]='league'></app-league-item>
