--- a/src/app/layout/teams/team-detail/team-detail.component.scss
+++ b/src/app/layout/teams/team-detail/team-detail.component.scss
@@ -3,7 +3,22 @@
     border-color: gray;
     border-width: 2px;
 }
+
 .cardPlayer {
-    max-width:180px;
-    max-height:180px;
-}
+    width: 350px;
+    height: 100px;
+    padding: 10px; 
+  }
+  
+  .cardPlayer img{
+    max-width: 50px;
+    max-height: 50px;
+    float: left;
+    padding-top: 10px;
+  }
+  
+  .cardPlayer h2{
+    padding-top: 5px;
+    font-size: 1.5em;
+    text-align: center;
+  }
