--- a/src/app/layout/tournaments/tournaments.component.html
+++ b/src/app/layout/tournaments/tournaments.component.html
@@ -1,5 +1,5 @@
 <div [@routerTransition]>
-  <app-page-header [heading]="'Torneos'" [icon]="'fa-table'"></app-page-header>
+  <app-page-header [heading]="'Torneos'" [icon]="'fa-list'"></app-page-header>
   <div class="row align-items-start">
     <div class="col">
       <app-tournament-form></app-tournament-form>
