--- a/src/app/shared/modules/player-share/player-item/player-item.component.html
+++ b/src/app/shared/modules/player-share/player-item/player-item.component.html
@@ -1,22 +1,29 @@
-<div class="column">
+<div class="cardPlayer mat-card" *ngIf="player">
+  <div class="left"><img class="md-card-image example-header-image" onerror="this.src='./assets/images/none.png'"
+    [src]="player.imageUrl" alt="user avatar"></div>
+    <div class="row">
+      <div class="padding20 left">
+        {{player.name}}
+        <br/>
+        <b>Numero:</b> <label>{{player.shirtNumber}}</label>
+      </div>
+    </div>
+</div>
+<!--<div class="column">
   <aside *ngIf="player" class="profile-card">
 
   <header>
 
-    <!-- here’s the avatar -->
     <a>
-      <img onerror="this.src='./assets/images/none.png'" [src]="player.imageUrl" style=" height: 210px; width: 210px;">
+      <img onerror="this.src='./assets/images/none.png'" [src]="player.imageUrl">
     </a>
 
-    <!-- the username -->
     <h1>{{player.name}}</h1>
 
-    <!-- and role or location -->
     <h2>- Posición -</h2>
 
   </header>
 
-  <!-- bit of a bio; who are you? -->
   <div class="profile-bio">
 
     <p>Info</p>
@@ -26,33 +33,27 @@
 
   </div>
 
-  <!-- some social links to show off -->
   <ul class="profile-social-links">
 
-    <!-- twitter - el clásico  -->
     <li>
       <a href="https://twitter.com/tutsplus">
         <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/social-twitter.svg">
       </a>
     </li>
 
-    <!-- envato – use this one to link to your marketplace profile -->
     <li>
       <a href="https://envato.com">
         <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/social-envato.svg">
       </a>
     </li>
 
-    <!-- codepen - your codepen profile-->
     <li>
       <a href="https://codepen.io/tutsplus">
         <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/social-codepen.svg">
       </a>
     </li>
 
-    <!-- add or remove social profiles as you see fit -->
-
   </ul>
 
 </aside>
-</div>
+</div>-->
