--- a/src/app/shared/modules/shared-module/team/team-form/team-form.component.html
+++ b/src/app/shared/modules/shared-module/team/team-form/team-form.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <strong>Crear Equipos</strong>
+    <strong>Equipo</strong>
   </div>
   <div class="card-block">
     <div class="form-group ">
