--- a/src/app/shared/modules/stat/stat.component.scss
+++ b/src/app/shared/modules/stat/stat.component.scss
@@ -1,5 +1,17 @@
 .card-style { 
- 
- min-width: 200px;
  margin: 1cm 1cm 1cm 1cm;
+}
+
+.card-style img{
+ vertical-align: middle;
+ max-height: 100px;
+ margin: 0 auto;
+ margin-top: 10px;
+}
+
+ .card-style h4{
+  font-size: 2rem;
+  text-align: center;
  }
+
+ 
