Muchos cambios de miguel

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,6 +6,20 @@
 @import "responsive";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+
+::ng-deep snack-bar-container.success {
+    background: green;
+}
+::ng-deep snack-bar-container.error {
+    background: red;
+}
+::ng-deep snack-bar-container.warning {
+    background: yellow;
+}
+::ng-deep snack-bar-container.default {
+    background: gray;
+}
+
 .sortable-item{
   width: 32%;
   height: 100px;
