--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -88,3 +88,6 @@ $topnav-background-color: #222;
         border: 2px solid #FFF;
     }
 }
+::ng-deep snack-bar-container.error {
+    background: red;
+}
